<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/form_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            style="@style/TextSubTitle.20"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/finding_driver" />

        <TextView
            android:layout_width="match_parent"
            style="@style/TextDesc.Grey"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:layout_marginStart="48dp"
            android:layout_height="wrap_content"
            android:text="@string/finding_driver_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="38dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/trip_cancel"
            android:textColor="@color/text_black"
            app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_cancel_black"
            app:iconGravity="start"
            app:iconPadding="4dp"
            app:iconTint="@color/text_black" />

    </LinearLayout>

</RelativeLayout>