<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/form_bg">

    <View
        android:id="@+id/form_dash"
        android:layout_width="33dp"
        android:layout_height="4dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/form_dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/form_title"
        style="@style/TextSubTitle.20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/sos_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_dash" />

    <TextView
        android:id="@+id/form_desc"
        style="@style/TextDesc.ServiceGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/sos_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_btn"
        android:layout_width="82dp"
        android:layout_height="88dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="68dp"
        android:text="@string/sos_btn"
        android:textAllCaps="false"
        android:textColor="@color/app_orange"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_emergency"
        app:iconGravity="top"
        app:iconTint="@color/app_orange"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>